syntax = "proto3";

option csharp_namespace = "BalStreamer2.Caster.Protos";

import "google/protobuf/empty.proto";

package casting;

service Casting {
	rpc CastStream (CastStartRequest) returns (CastStartResponse);
	rpc StopStream (StopStreamRequest) returns (google.protobuf.Empty);
}

message CastStartRequest {
	string chromecast = 1;
	string stream = 2;
}

message CastStartResponse {
	bool success = 1;
}

message StopStreamRequest {
	string chromecast = 1;
}